# C-_MLP

./: CMakeLists.txt  Makefile  README.md  main.cpp
include/: Common.h  Storage.h  Tensor.h
src/: Storage.cpp  Tensor.cpp
